# spbu_2020_c_homeworks-1

./: 1sol.c  2sol.c  3sol.c  4sol.c  5sol.c  CMakeLists.txt
Homeworks_1/: 1sol.c  2sol.c  3sol.c  4sol.c  5sol.c
Homeworks_2/: 1sol.c  2_2sol.c  2_3sol.c  2_4sol.c  2_5sol.c  2_5sol_2version.c  2_5sol_iteration_version.c  2_5sol_recursion_version.c
Homeworks_3/: 3_1sol.c  3_2sol.c
Homeworks_4/: 3sol.c  4_1sol.c  4_2sol.c
Homeworks_5/: 5_1sol.c  5_2sol.c
Homeworks_6/: 6_1sol.c  input.txt
Homeworks_7/: 7.1sol.c  7.2sol.c  text.txt
Homeworks_8/: 8.1sol.c
test1/: test1.1.c  test1.2.c
test2/: 2.1test.c  2.2sol.c  2.3sol.c  text.txt
test3/: 3sol.c
